[package]
name = "wgsl-playground"
version = "0.1.0"
authors = ["Paul Butler <paulgb@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Playground for experimenting with WGSL fragment shaders with live-reloading."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.5.1", features = ["derive"] }
clap = "3.0.0-beta.2"
futures = "0.3.15"
naga = "0.4.1"
notify = "4.0.17"
wgpu = "0.8.1"
winit = "0.25.0"
