[package]
name = "wgsl-playground"
version = "0.1.7"
authors = ["Paul Butler <paulgb@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Playground for experimenting with WGSL fragment shaders with live-reloading."
resolver = "2"
repository = "https://github.com/paulgb/wgsl-playground"

[dependencies]
bytemuck = { version = "1.12.0", features = ["derive"] }
clap = { version = "4.0.19", features = ["derive"] }
futures = "0.3.23"
notify = "4.0.17"
wgpu = { version = "0.14.0", features = ['default', 'naga'] }
winit = "0.27.1"
wgpu-subscriber = "0.1.0"
